<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_screen"
    tools:context="com.example.loginscreentest.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/login_text_field"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/password_edit_text"
        android:layout_alignLeft="@+id/password_edit_text"
        android:layout_alignRight="@+id/password_edit_text"
        android:layout_marginBottom="28dp"
        android:background="@color/login_text_field"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:width="156dp" 
        android:background="@drawable/custom_login_button_drawable"/>

    <TextView
        android:id="@+id/password_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_edit_text"
        android:layout_alignLeft="@+id/password_edit_text"
        android:layout_alignRight="@+id/login_button"
        android:paddingLeft="17dp"
        android:textColor="@color/warning_text" />

    <TextView
        android:id="@+id/username_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username_edit_text"
        android:layout_alignLeft="@+id/username_edit_text"
        android:layout_alignRight="@+id/password_warning_textfield"
        android:paddingLeft="17dp"
        android:textColor="@color/warning_text" />

    <TextView
        android:id="@+id/wrong_userinfo_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_edit_text"
        android:layout_alignRight="@+id/password_edit_text"
        android:layout_below="@+id/password_edit_text"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="@color/warning_text" />

    <TextView
        android:id="@+id/or_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/or" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_button"
        android:layout_below="@+id/or_textfield"
        android:layout_alignRight="@+id/login_button"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_login_button_drawable"
        android:text="@string/sign_up" />

</RelativeLayout>