<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_screen"
    tools:context="com.example.loginscreentest.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/login_text_field"
        android:ems="10"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/repeat_new_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/new_password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="28dp"
        android:background="@color/login_text_field"
        android:ems="10"
        android:hint="@string/repeat_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/new_username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/new_password_edit_text"
        android:layout_alignLeft="@+id/new_password_edit_text"
        android:layout_alignRight="@+id/new_password_edit_text"
        android:layout_marginBottom="28dp"
        android:background="@color/login_text_field"
        android:ems="10"
        android:hint="@string/new_username_hint"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/new_password_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_password_edit_text"
        android:layout_alignLeft="@+id/new_password_edit_text"
        android:layout_alignRight="@+id/confirm_sign_up_button"
        android:paddingLeft="25dp"
        android:textColor="@color/warning_text" />

    <TextView
        android:id="@+id/new_username_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_username_edit_text"
        android:layout_alignLeft="@+id/new_username_edit_text"
        android:layout_alignRight="@+id/new_password_warning_textfield"
        android:paddingLeft="25dp"
        android:textColor="@color/warning_text" />

    <TextView
        android:id="@+id/repeat_new_password_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/repeat_new_password_edit_text"
        android:layout_alignRight="@+id/repeat_new_password_edit_text"
        android:layout_below="@+id/new_password_edit_text"
        android:layout_marginTop="10dp"
        android:paddingLeft="25dp" 
        android:textColor="@color/warning_text"/>

    <Button
        android:id="@+id/confirm_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:ellipsize="start"
        android:text="@string/sign_up"
        android:width="156dp" />

    <TextView
        android:id="@+id/general_sign_up_warning_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm_sign_up_button"
        android:layout_alignLeft="@+id/repeat_new_password_edit_text"
        android:layout_alignRight="@+id/repeat_new_password_edit_text"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/warning_text"/>

</RelativeLayout>